# auge-ai-test

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  REPORT.md  TEST_PROJECT_REPORT.md  TRADEOFFS.md  docker-compose.yml  pyproject.toml  requirements.txt
data/: README_data.md  golden_seed.jsonl  golden_set.jsonl  historical_results.csv  quick_test_questions.md
data/documents/: CAL-2026-001_Campaign_Advertising_Calendar.md  GOV-2024-007_Procurement_and_Audit_Manual.md  LEY-2021-014_Electoral_Code.md  LEY-2022-008_Data_Protection_Act.md  POL-2025-004_AI_Governance_Policy.md  REG-2024-002_Campaign_Finance_Rules.md  REP-2025-010_Budget_Transparency_Guidelines.md  REP-2025-011_Budget_Execution_Report.md  REP-2026-003_Turnout_and_Service_Report.md  auge_overview.md  sensor_catalog.md
docker/: entrypoint.sh
eval/: __init__.py  evaluate.py  experiment.py  metrics.py
scripts/: build_index.py  inspect_data.py  preview_chunks.py  run_question.py
src/: __init__.py  api.py  chunking.py  cli.py  confidence.py  config.py  data_loader.py  embeddings.py  generator.py  rag_pipeline.py  reranker.py  retriever.py  tabular_query.py  vector_store.py
tests/: test_chunking.py  test_confidence.py  test_data_loader.py  test_eval_metrics.py  test_evaluate.py  test_experiment.py  test_generator.py  test_rag_pipeline.py  test_retrieval.py  test_scaffolding.py  test_tabular_query.py  test_vector_store.py
