[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "auge-rag"
version = "0.1.0"
description = "Local RAG system for AUGE Intelligence take-home project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []  # see requirements.txt for pinned deps

[project.scripts]
auge-rag = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "eval*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
